--- a/Main.html
+++ b/Main.html
@@ -19,7 +19,7 @@
     <button type="submit" id="generateButton">Generate Password</button>
     <button type="submit" id="reloadButton">Reload</button>
     
-    <script type="text/javascript" charset="utf-8" href="script.js">
+    <script type="text/javascript" charset="utf-8" src="script.js">
     </script>
 </body>
 </html>
