--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <label for="numbersCheckbox" class="text">Numbers: </label><input type="checkbox" id="numbersCheckbox" class="checkbox" checked><br>
     <label for="symbolsCheckbox" class="text">Symbols: </label><input type="checkbox" id="symbolsCheckbox" class="checkbox" checked><br>
     <br><br>
-    <button type="submit" id="generateButton">Generate Password</button>
-    <button type="submit" id="reloadButton">Reload</button>
+    <button type="submit" id="generateButton" class="button" >Generate Password</button>
+    <button type="submit" id="reloadButton" class="button" >Reload</button>
     
     <script type="text/javascript" charset="utf-8" src="script.js">
     </script>
